--- a/game.css
+++ b/game.css
@@ -1,16 +1,20 @@
-* {
+/* * {
   border: 2px solid red;
-}
-
-button,
+} */
 .start {
-  height: 40px;
+  margin: 0;
+  position: absolute;
+  top: 10px;
+}
+button {
+  height: 30px;
   width: 100px;
   background-color: rgb(33, 33, 33);
   color: white;
   border-radius: 10px;
   border: 2px dashed black;
   opacity: 90%;
+  text-align: center;
 }
 h1 {
   text-align: center;
